resources/css/public/sections/_header.scss
/* ... */
.home-page .header,
.portfolio-project-page .header,
.news-article-page .header {
    color: var(--color-white);

    .header-logo {
        color: var(--color-white);

        &:hover {
            color: var(--color-gold-lighter);
        }
    }

    .main-menu ul a {
        --menu-link-color: var(--color-white);
        --menu-link-hover-color: var(--color-white);
        --menu-link-active-color: var(--color-white);
    }

    .header-contact-btn {
        --btn-color: var(--color-white);
        --btn-color-border: var(--color-white);
        --btn-color-bg: transparent;

        &:hover {
            --btn-color: var(--color-font-highlight-darker);
            --btn-color-bg: var(--color-white);
            --btn-color-border: var(--color-white);
        }
    }

    .main-menu-toggle-button {
        --btn-color: var(--color-white);

        span {
            &::before,
            &::after {
                background-color: var(--color-white);
            }
        }
    }
}

.header-logo {
    --logo-size: #{range.build(160, 240)};

    margin-right: auto;
    position: relative;
    translate: 0 -14%;
    color: var(--color-primary-brand-900-darker-silent);

    @media (max-width: 1599px) {
        --logo-size: 180px;
    }

    @media (max-width: 1439px) {
        --logo-size: 170px;
    }

    @media (max-width: 767px) {
        --logo-size: 140px;
    }

    &:hover {
        color: var(--color-primary-brand-800-dark);
    }
}

.inner-page {
    .header {
        color: var(--color-primary-brand-900-darker-silent);

        &-logo {
            &:hover {
                color: var(--color-primary-brand-800-dark);
            }
        }

        .header-contact-btn {
            --btn-color: var(--color-interaction-primary-default);
            --btn-color-border: var(--color-interaction-primary-default);

            // &::after {
            //     background-color: var(--color-primary-brand-800-dark);
            // }

            &:hover {
                --btn-color: var(--color-white);
                --btn-color-bg: var(--color-interaction-primary-hover);
                --btn-color-border: var(--color-interaction-primary-hover);
            }
        }

        .lang {
            &::before {
                border-color: var(--color-primary-brand-900-darker-silent);
            }
        }

        .main-menu-toggle-button {
            --btn-color: var(--color-primary-brand-900-darker-silent);

            span {

                &::before,
                &::after {
                    background-color: var(--color-primary-brand-900-darker-silent);
                }
            }
        }
    }
}

.post-page {
    .header {
        &::before {
            backdrop-filter: none;
        }
    }
}

.is-page-scrolled .header {
    background-color: rgba(var(--color-white-rgb), .8);
    backdrop-filter: blur(8px);
    box-shadow: 0 0 0 1px rgba(var(--color-black-rgb), .05), 0 0 16px 0 rgba(var(--color-black-rgb), .1);
    color: var(--color-primary-brand-900-darker-silent);

    &::before {
        opacity: 0;
        visibility: hidden;
    }

    .header-logo {
        color: var(--color-primary-brand-900-darker-silent);

        &:hover {
            color: var(--color-primary-brand-800-dark);
        }
    }

    .header-contact-btn {
        --btn-color: var(--color-interaction-primary-default);
        --btn-color-border: var(--color-interaction-primary-default);

        &:hover {
            --btn-color: var(--color-white);
            --btn-color-bg: var(--color-interaction-primary-hover);
            --btn-color-border: var(--color-interaction-primary-hover);
        }

        // &::before,
        // &::after {
        //     background: var(--color-dark);
        // }
    }

    .lang {
        &::before {
            border-color: var(--color-primary-brand-900-darker-silent);
        }
    }

    .main-menu-toggle-button {
        --btn-color: var(--color-primary-brand-900-darker-silent);

        span {

            &::before,
            &::after {
                background-color: var(--color-primary-brand-900-darker-silent);
            }
        }
    }

    .main-menu ul a {
        --menu-link-color: var(--color-interaction-primary-default);
        --menu-link-hover-color: var(--color-interaction-primary-hover);
        --menu-link-active-color: var(--color-interaction-primary-active);
    }
}

.header-container {
    display: flex;
    align-items: center;
    gap: range.build(30, 46);
}

.main-menu {
    margin-right: calc(range.build(10, 23) * -1);

    @media (max-width: 1259px) {
        width: 260px;
        height: 100vh;
        height: 100dvh;
        display: flex;
        flex-direction: column;
        position: fixed;
        top: 0;
        left: -280px;
        margin-right: 0;
        background-color: var(--color-white);
        box-shadow: 0 0 16px 0 rgba(var(--color-dark-rgb), .25);
        z-index: 10;
        padding-bottom: 20px;
        color: var(--color-primary-brand-900-darker-silent);
        transition: var(--transition);
        transition-property: left;
    }
}

.is-opened-main-menu .main-menu {
    left: 0;
}

.main-menu-head {
    display: flex;
    align-items: center;
    height: var(--header-height);
    gap: 20px;
    padding: 0 var(--gap-container);
    position: relative;

    &::after {
        display: block;
        content: '';
        width: 100%;
        box-shadow: 0 0 0 1px var(--color-gray-light);
        position: absolute;
        left: 0;
        bottom: 0;
    }

    @media (min-width: 1260px) {
        display: none;
    }
}

.main-menu-logo {
    --logo-size: #{range.build(160, 240)};

    translate: 0 -14%;

    &:hover {
        color: var(--color-primary-brand-700-strongest);
    }
}
/* ... */

